# KDD_CUP_2022

./: .gitignore  Makefile  README.md  profile.prof  pyproject.toml
archive/1A_MAIN_MODEL/: dataset.py  model.py  pl_wrapper.py  predict.py  prepare.py  training.py
archive/1A_MAIN_MODEL/checkpoints_fold-3/: model_fold-3.ckpt
archive/2A_MODEL_10HOURS/: pl_wrapper.py  predict.py  training.py
archive/2A_MODEL_10HOURS/checkpoints_fold-1_10HOURS/: model_fold-1.ckpt
archive/2A_MODEL_10HOURS/checkpoints_fold-2_10HOURS/: model_fold-2.ckpt
archive/2A_MODEL_10HOURS/checkpoints_fold-3_10HOURS/: model_fold-3.ckpt
archive/2A_MODEL_10HOURS/checkpoints_fold-4_10HOURS/: model_fold-4.ckpt
archive/2A_MODEL_10HOURS/checkpoints_fold-5_10HOURS/: model_fold-5.ckpt
archive/2B_MODEL_3HOURS/: metrics.py  prepare.py  training.py
archive/2B_MODEL_3HOURS/checkpoints_fold-2_3HOURS/: model_fold-2.ckpt
archive/2B_MODEL_3HOURS/checkpoints_fold-5_3HOURS/: model_fold-5.ckpt
archive/2C_MODEL_1HOUR/: predict.py  prepare.py  training.py
archive/2C_MODEL_1HOUR/checkpoints_fold-4_1HOURS/: model_fold-4.ckpt
archive/3A_FINAL_MODEL/: dataset10HOURS.py  dataset_1HOURS.py  dataset_3HOURS.py  model_10HOURS.py  model_1HOURS.py  model_3HOURS.py  pl_wrapper_10HOURS.py  pl_wrapper_1HOURS.py  pl_wrapper_3HOURS.py  predict.py  training.py
archive/3A_FINAL_MODEL/checkpoints_fold-1/: model_fold-1.ckpt
docker/: Dockerfile  docker-compose.yaml
scoring/: error_analysis.py  evaluation.py  loader.py  metrics.py  settings.yaml  test_data.py
scripts/: create_cv_folds.py  metatrainer.py
(+30 files in other folders)
