[tool.poetry]
name = "kdd"
version = "0.1.0"
description = ""
authors = ["manuel <manuesua@ucm.es>"]
packages = [
    { include = "scoring" },
]

[tool.poetry.dependencies]
python = ">=3.7.1, <=3.8"
numpy = "1.21.1"
pandas = {version="^1.3.4", python=">3.7, <3.8"}
rich = "^12.2.0"
autoflake = "^1.4"
scikit-learn = {version="^1.0.2", python=">3.7, <3.8"}
statsmodels = "^0.13.2"
wandb = "^0.12.20"
dash = "^2.5.1"
seaborn = "^0.11.2"
ipykernel = "^6.15.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
tscv = "^0.1.2"
pydantic = "^1.9.1"
isort = "^5.10.1"
nbformat = "^5.4.0"
tqdm = "^4.64.0"
kaleido = "0.2.1"
torch = "1.12.0"
pytorch-lightning = "^1.6.4"
snakeviz = "^2.1.1"
adabelief-pytorch = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
